@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

class PropertyType{
    designation
}

class Property{
    propertyType
    areaProperty
    distanceCityCenter
    conditionProperty
    photos
    propertyCode
}





class House {
    basement
    loft
    sunExposure
}

class Building{
    numberBedrooms
    numberBathrooms
    numberParking
    availableEquipment
}

class Advertisement {
    date
    commissionType
    commissionValue
}

class Location{
    street
    zipCode
    stateUS
    city
    district
}


class BusinessType {
    designation
}

class Request{
    owner
    agent
    date
    salePrice
    rentPrice
    durationOfContract
}


Property <|-- Building
Property "*" -- "1" PropertyType: contains >
Building <|-- House
Property "1" -- "1" Request: represents <
Request "1" -- "1" Advertisement:contains <
Location "1" -- "1" Property: owns <
Request "*" -- "1" BusinessType: contains >


@enduml